--- a/dnd/frontend/package.json
+++ b/dnd/frontend/package.json
@@ -22,6 +22,8 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.2",
     "style-loader": "^3.3.2"
   }
 }
